kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: habit
  namespace: habit
  labels:
    app.kubernetes.io/name: habit
spec:
  selector:
    app: habit
  ports:
    - name: http
      port: 80
      targetPort: http
